2002-02-28  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-link-desktop-file.c:
	(nautilus_link_desktop_file_get_link_icon_from_desktop):
	Fix handling of files with Icon entries that are full paths.

	* libnautilus-private/nautilus-file.c: Name tweak.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* components/notes/nautilus-notes.c: (do_destroy): Remove some
	GNOME2_CONVERSION_COMPLETE code.

	* src/nautilus-theme-selector.h:
	* src/nautilus-theme-selector.c:
	(remove_theme_selector_idle_callback): New.
	(remove_theme_selector_changed_callback): Schedule the remove to be done
	at idle time, since GtkTreeView can't handle changes to the tree from
	inside the selection changed signal.
	(theme_selector_finalize): Cancel idle if it's still around.
	(for_each_theme_callback), (theme_selector_populate_list),
	(theme_selector_update_selected_theme_from_preferences),
	(nautilus_theme_selector_get_selected_theme): Return NULL rather
	than emitting a g_warning when no theme is selected.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* src/file-manager/fm-directory-view.c: (add_numbered_menu_item):
	Escape the path too, not just the menu item name, because the path
	contains other menu item names.
	(add_submenu): Same.

2002-02-28  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-link-desktop-file.c:
	(nautilus_link_desktop_file_get_link_icon_from_desktop):
	Fix assert where it was calling gnome_vfs_get_uri_from_local_path
	on something that wasn't an absolute local path.

2002-02-28  Josh Barrow  <drleary@mac.com>

	* icons/Makefile.am:
	* icons/Services.png:
	No-one uses services anymore, remove

	* icons/bubble-LL.png:
	* icons/bubble-LR.png:
	* icons/bubble-UL.png:
	* icons/bubble-UR.png:
	All of these were for a non-realized Services project.
	Remove.

	* icons/bullet.png:
	This was for the aa version of the stretch handles.  If we
	decide to make the stretch handles aa, we can "cvs bring them back"

	* icons/computer.png: